<resources>
    <string name="app_name">FoodDeliveryApp1</string>
    <string name="food_delivery">Food Delivery</string>
    <string name="account">Войти в свой аккаунт</string>
    <string name="password">Пароль</string>
    <string name="login">Логин</string>
    <string name="enter">Войти</string>
    <string name="title_activity_login_test">LoginActivityTest</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="passwordText">Пароль</string>
    <string name="mailText">Почта</string>
</resources>