<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/com.example.fooddeliveryapp"
    xmlns:app2="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="227dp"
        android:layout_below="@id/AccesText"
        android:layout_margin="20dp"
        android:layout_marginTop="27dp"
        android:layout_marginBottom="20dp"
        app2:cardBackgroundColor="#8BC34A"
        app2:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="#E8F5E9"
                android:editable="true"
                android:ems="10"
                android:fontFamily="@font/nunito_black"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="5dp"
                android:password="true"
                android:selectAllOnFocus="true"
                android:textColor="#E8F5E9"
                android:textColorHint="#E8F5E9"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="#E8F5E9"
                android:ems="10"
                android:fontFamily="@font/nunito_black"
                android:hint="@string/login"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:padding="5dp"
                android:singleLine="false"
                android:textColor="#E8F5E9"
                android:textColorHint="#E8F5E9" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@id/FoodDeliveryText"
        android:layout_centerHorizontal="true"
        android:tint="#A64CAF50"
        app2:srcCompat="@drawable/photo_2022_06_27_10_05_15_" />

    <com.example.fooddeliveryapp1.GradientTextView
        android:id="@+id/FoodDeliveryText"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-3dp"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/itim"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/food_delivery"
        android:textSize="50sp"
        android:textStyle="bold"
        app2:colorEndGradient="@color/textview_end_gradient"
        app2:colorStartGradient="@color/textview_start_gradient"
        app:colorEndGradient="@color/textview_end_gradient"
        app:colorStartGradient="@color/textview_start_gradient" />

    <TextView
        android:id="@+id/AccesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/nunito"
        android:text="@string/account"
        android:textSize="22sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/login_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="14dp"
        android:background="#8BC34A"
        android:clickable="true"
        android:contextClickable="true"
        android:fontFamily="@font/nunito_black"
        android:includeFontPadding="false"
        android:onClick="ButtonClick"
        android:stateListAnimator="@android:anim/accelerate_decelerate_interpolator"
        android:text="@string/enter"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#E7F4E8" />

    <Button
        android:id="@+id/register_button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="false"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="14dp"
        android:background="#8BC34A"
        android:clickable="true"
        android:contextClickable="true"
        android:fontFamily="@font/nunito_black"
        android:includeFontPadding="false"
        android:stateListAnimator="@android:anim/accelerate_decelerate_interpolator"
        android:text="Регистрация"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#E7F4E8" />

    <TextView
        android:id="@+id/orText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/register_button"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="false"
        android:layout_centerInParent="false"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/nunito"
        android:text="Или" />

</RelativeLayout>
